Fix: Added invisible border around morphtag items to prevent sporadic redrawing and realignment of items.

--- a/public/stylesheets/morphtags.css
+++ b/public/stylesheets/morphtags.css
@@ -5,6 +5,7 @@
   margin-right: .10em;
   margin-bottom: 1em;
   text-align: center;
+  border: white 1px solid; /* This prevents redraws of items when selected. */
 }
 
 .morphtags .form {
